--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,7 @@ pandoc: 3.6.2
 pkgdown: 2.1.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-08-24T14:36Z
+last_built: 2025-08-24T14:45Z
+urls:
+  reference: https://CharlotteMicheloud.github.io/test-for-ISCB/reference
+  article: https://CharlotteMicheloud.github.io/test-for-ISCB/articles
